app/gitlab/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.gitlab.namespace
  labels:
    name: #@ data.values.gitlab.namespace
