app/gitlab/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: #@ data.values.gitlab.namespace
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`)".format(data.values.gitlab.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: server
      port: 80
      strategy: RoundRobin
